NIFI-14070 Replaced where possible switch statements with enhanced switch statements.